[project]
name = "pytorch-learn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Gao", email = "mgao31415@gmail.com"},
]
dependencies = [
    "torch>=2.4.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "sklearn>=0.0.post12",
    "scikit-learn>=1.3.2",
    "jupyterlab>=4.3.4",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
